# vigia-publico

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
deploy/: nginx-vigiapublico.conf
reports/: 2026-04.md  2026-06.md
scripts/: run_dashboard.bat  run_monthly.bat
src/senado_sentinel/: __init__.py  cli.py  config.py  orchestrator.py
src/senado_sentinel/camara_api/: client.py  endpoints.py
src/senado_sentinel/dashboard/: app.py  data.py
src/senado_sentinel/db/: connection.py  repository.py
src/senado_sentinel/detection/: llm_analysis.py  prompts.py  statistical.py
src/senado_sentinel/ingestion/: backfill.py  incremental.py
src/senado_sentinel/reporting/: report_builder.py
src/vigia_publico/: __init__.py  cli.py  config.py  orchestrator.py
src/vigia_publico/analytics/: queries.py
src/vigia_publico/camara_api/: client.py  endpoints.py
src/vigia_publico/dashboard/: aba_achados.py  aba_achados_senado.py  aba_gastos.py  aba_gastos_senado.py  aba_perfil.py  aba_perfil_senado.py  aba_presenca.py  app.py  app_public.py  data.py  export.py  filtros.py  filtros_senado.py  fonte_page.py  public_pages.py  theme.py  (+3 more)
tests/: conftest.py  test_backfill_senado.py  test_dashboard_filters.py  test_dashboard_filters_senado.py  test_data_cache_isolamento.py  test_export.py  test_fonte_page.py  test_llm_prompts.py  test_migrations.py  test_public_snapshot.py  test_report_builder.py  test_repository_idempotency.py  test_statistical_rules.py  test_statistical_rules_senado.py
(+21 files in other folders)
