[project]
name = "senado-sentinel"
version = "0.1.0"
description = "Monitor mensal de gastos, presença e discursos dos deputados federais brasileiros"
readme = "README.md"
authors = [
    { name = "Matheus Tomazi", email = "matheus.tomazi5@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tenacity>=9.1.4",
]

[project.scripts]
senado-sentinel = "senado_sentinel.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
]
